force-app/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__A3a_Sex__c.field-meta.xml
<CustomField>
    <fullName>CMPL123CME__A3a_Sex__c</fullName>
    <description>The sex that a person has or was assigned to at birth.</description>
    <inlineHelpText>Enter the patient&apos;s sex at birth (the sex that a person has or was assigned to at birth).</inlineHelpText>
    <label>A3a - Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Undifferentiated</fullName>
            </value>
            <value>
                <fullName>Decline to answer</fullName>
            </value>
            <value>
                <fullName>ASKU</fullName>
                <isActive>false</isActive>
                <label>ASKU</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
            <value>
                <fullName>NI</fullName>
                <isActive>false</isActive>
                <label>NI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>