force-app/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__D8_Was_device_serviced_by_third_party__c.field-meta.xml
<CustomField>
    <fullName>CMPL123CME__D8_Was_device_serviced_by_third_party__c</fullName>
    <inlineHelpText>Was this Device serviced by a third party?</inlineHelpText>
    <label>D8 - Was device serviced by third party?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>ASKU</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>