force-app/main/default/objects/CMPL123CME__EMDR__c/fields/CMPL123CME__EMDR_Form_Version__c.field-meta.xml
<CustomField>
    <fullName>CMPL123CME__EMDR_Form_Version__c</fullName>
    <description>EMDR Form Version</description>
    <inlineHelpText>EMDR Form Version</inlineHelpText>
    <label>EMDR Form Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2023</fullName>
                <default>true</default>
                <label>2023</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>