force-app/main/default/objects/CMPL123CME__EMDR__c/fields/EMDR_Assigned_To_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>EMDR_Assigned_To_Reviewer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMDR Assigned To Reviewer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>