force-app/main/default/objects/CMPL123CME__EMDR__c/fields/OLY_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>OLY_Rejection_Reason__c</fullName>
    <label>EMDR Rejection Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Type of Report (B1)</fullName>
            </value>
            <value>
                <fullName>Incorrect Event Description (B5)</fullName>
            </value>
            <value>
                <fullName>Incorrect Facility Selection (D3)</fullName>
            </value>
            <value>
                <fullName>Incorrect Aware Date (G3/F6)</fullName>
            </value>
            <value>
                <fullName>Incorrect Type of Reportable Event (H1)</fullName>
            </value>
            <value>
                <fullName>Incorrect Manufacturer Narrative (H10)</fullName>
            </value>
            <value>
                <fullName>Incorrect Product Details</fullName>
            </value>
            <value>
                <fullName>Incorrect IMDRF Code</fullName>
            </value>
            <value>
                <fullName>Incorrect PROCODE</fullName>
            </value>
            <value>
                <fullName>Missing Information - Critical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Incorrect Decision (Reportable)</fullName>
                <isActive>false</isActive>
                <label>Incorrect Decision (Reportable)</label>
            </value>
            <value>
                <fullName>Incorrect Decision Path</fullName>
                <isActive>false</isActive>
                <label>Incorrect Decision Path</label>
            </value>
            <value>
                <fullName>Incorrect Decision Rationale</fullName>
                <isActive>false</isActive>
                <label>Incorrect Decision Rationale</label>
            </value>
            <value>
                <fullName>Incorrect Decision Type</fullName>
                <isActive>false</isActive>
                <label>Incorrect Decision Type</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>