force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/B2_Date_of_Death_null_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>B2_Date_of_Death_null_Required</fullName>
    <active>true</active>
    <description>B2 - Death Date Null is required if if Death is selected in B2 Outcomes</description>
    <errorConditionFormula>AND(INCLUDES( CMPL123CME__B2_Outcomes_attributed_to_AE__c,&quot;Death&quot; ),
AND(ISBLANK( CMPL123CME__B2_Date_of_Death__c ),ISBLANK( TEXT(CMPL123CME__B2_Death_Date_Null__c ))))</errorConditionFormula>
    <errorMessage>B2 - Date of Death or B2 - Death Date Null is required if Death is selected in B2 Outcomes</errorMessage>
</ValidationRule>