force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/B2_Outcomes_Attributed_to_AE.validationRule-meta.xml
<ValidationRule>
    <fullName>B2_Outcomes_Attributed_to_AE</fullName>
    <active>true</active>
    <description>B2 - Outcomes Attributed to AE is required if Adverse Event/Product Problem is Adverse Event</description>
    <errorConditionFormula>AND(
ISCHANGED(CMPL123CME__CMPL123_WF_Status__c),
INCLUDES(CMPL123CME__B1_AdverseEvent_ProductProblem__c,&quot;Adverse Event&quot;),
ISNULL(CMPL123CME__B2_Outcomes_attributed_to_AE__c)
)</errorConditionFormula>
    <errorMessage>B2 - Outcomes Attributed to AE is required if B1 - Adverse Event/Product Problem is Adverse Event</errorMessage>
</ValidationRule>