force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/F4_User_Facility_Contact_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>F4_User_Facility_Contact_Email</fullName>
    <active>true</active>
    <description>The field is required before submitting EMDR  to the &apos;Review in Progress&apos; state (Applicable for INITIAL US IMPORTER MDR)</description>
    <errorConditionFormula>AND(
CMPL123CME__CMPL123_WF_Status__c = &apos;Review In Progress&apos;,
RecordType.Name=&quot;Initial&quot;,
OLY_Is_Importer_Report__c,
ISBLANK(CMPL123CME__F3_Contact_Email__c)
)</errorConditionFormula>
    <errorDisplayField>CMPL123CME__F3_Contact_Email__c</errorDisplayField>
    <errorMessage>F4-User Facility Contact Email cannot be empty</errorMessage>
</ValidationRule>