force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/F6_Field_Mandatory_Importer_EMDRs.validationRule-meta.xml
<ValidationRule>
    <fullName>F6_Field_Mandatory_Importer_EMDRs</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
CMPL123CME__CMPL123_WF_Status__c = &apos;Review In Progress&apos;,
CONTAINS(OLY_Type_of_Reporter__c ,&apos;Importer&apos;),
OR(ISBLANK(CMPL123CME__F6_Date_facility_dist_was_aware__c),
CMPL123CME__F6_Date_facility_dist_was_aware__c &gt; TODAY()),
$Permission.Assessment_Owner_US
)</errorConditionFormula>
    <errorMessage>F6 - Date UF/Importer was Aware is a mandatory field and should not contain future date.</errorMessage>
</ValidationRule>