force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/F7_Report_Mandatory_Assessment_Owner_IMP.validationRule-meta.xml
<ValidationRule>
    <fullName>F7_Report_Mandatory_Assessment_Owner_IMP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &apos;Supplemental&apos;,
CMPL123CME__CMPL123_WF_Status__c = &apos;Review In Progress&apos;,
CONTAINS(OLY_Type_of_Reporter__c ,&apos;Importer&apos;), ISPICKVAL(CMPL123CME__F7_Type_Report_Device__c, &apos;&apos;),
$Permission.Assessment_Owner_US
)</errorConditionFormula>
    <errorMessage>F7 - Type of Report - Device is a mandatory field</errorMessage>
</ValidationRule>