force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/G1_MFG_SITE_NAME.validationRule-meta.xml
<ValidationRule>
    <fullName>G1_MFG_SITE_NAME</fullName>
    <active>true</active>
    <description>The field is required for INITIAL US Manufacturer EMDRs</description>
    <errorConditionFormula>AND(
ISCHANGED(CMPL123CME__CMPL123_WF_Status__c), 
RecordType.Name=&quot;Initial&quot;,
OLY_Is_Manufacturer_Report__c,
ISBLANK(CMPL123CME__G1_Mfg_Name__c)
)</errorConditionFormula>
    <errorMessage>G1 - Manufacturing site name cannot be empty.</errorMessage>
</ValidationRule>