force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/G3_Field_Mandatory_Manufacturer_EMDRs.validationRule-meta.xml
<ValidationRule>
    <fullName>G3_Field_Mandatory_Manufacturer_EMDRs</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
CMPL123CME__CMPL123_WF_Status__c = &apos;Review In Progress&apos;,
CONTAINS(OLY_Type_of_Reporter__c ,&apos;Manufacturer&apos;),
OR(ISBLANK(CMPL123CME__G3_Date_received_by_Mfg__c),
CMPL123CME__G3_Date_received_by_Mfg__c &gt; TODAY()),
$Permission.Assessment_Owner_US
)</errorConditionFormula>
    <errorMessage>G3 - Date Received by Mfg is a mandatory field and should not contain future date.</errorMessage>
</ValidationRule>