force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/G6_Report_Mandatory_Assessment_Owner_MFG.validationRule-meta.xml
<ValidationRule>
    <fullName>G6_Report_Mandatory_Assessment_Owner_MFG</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &apos;Supplemental&apos;,
CMPL123CME__CMPL123_WF_Status__c = &apos;Review In Progress&apos;,
CONTAINS(OLY_Type_of_Reporter__c ,&apos;Manufacturer&apos;),
ISBLANK(CMPL123CME__G6_Type_of_Report__c),
$Permission.Assessment_Owner_US
)</errorConditionFormula>
    <errorMessage>G6 - Type of Report is a mandatory field</errorMessage>
</ValidationRule>