force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/H1_Type_Of_Reportable_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>H1_Type_Of_Reportable_Event</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(CMPL123CME__CMPL123_WF_Status__c),
RecordType.Name=&quot;Initial&quot;,
OLY_Is_Manufacturer_Report__c,
ISBLANK(CMPL123CME__H1_Type_of_Reportable_Event_2021__c)
)</errorConditionFormula>
    <errorMessage>H1 - Type of Reportable Event is a mandatory field</errorMessage>
</ValidationRule>