force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/H2_Mandatory_Assessment_Owner_MFG.validationRule-meta.xml
<ValidationRule>
    <fullName>H2_Mandatory_Assessment_Owner_MFG</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &apos;Supplemental&apos;,
CMPL123CME__CMPL123_WF_Status__c = &apos;Review In Progress&apos;,
CONTAINS(OLY_Type_of_Reporter__c ,&apos;Manufacturer&apos;),
ISBLANK(CMPL123CME__H2_If_follow_up_What_Type__c),
$Permission.Assessment_Owner_US
)</errorConditionFormula>
    <errorMessage>H2 - If Follow-up, What Type? is a mandatory field</errorMessage>
</ValidationRule>