force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/OLY_Prevent_duplicate_Initial_Mfr_EMDR.validationRule-meta.xml
<ValidationRule>
    <fullName>OLY_Prevent_duplicate_Initial_Mfr_EMDR</fullName>
    <active>true</active>
    <description>This Assessment is not eligible for a new Initial Manufacturer EMDR.</description>
    <errorConditionFormula>AND(
    ISNEW(),
    RecordType.Name = &apos;Initial&apos;,
    OLY_Is_Manufacturer_Report__c,
    NOT(ISBLANK(OLY_Assessment__c)),
    NOT(OLY_Assessment__r.OLY_Is_Eligible_for_Initial_Mfr_EMDR__c)
)</errorConditionFormula>
    <errorDisplayField>CMPL123CME__EMDR_Form_Version__c</errorDisplayField>
    <errorMessage>This Assessment is not eligible for a new Initial Manufacturer EMDR.</errorMessage>
</ValidationRule>