force-app/main/default/objects/CMPL123CME__EMDR__c/validationRules/OLY_Supplemental_EMDR_CreationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>OLY_Supplemental_EMDR_CreationValidation</fullName>
    <active>false</active>
    <description>Prevent progressing Supplemental EMDR through workflow</description>
    <errorConditionFormula>AND( 
    RecordType.Name = &quot;Supplemental&quot;,
    OR(
        ISBLANK(CMPL123CME__Initial_MDR__c)
        /* , CMPL123CME__Initial_MDR__r.CMPL123CME__CMPL123_WF_Status__c &lt;&gt; &apos;Closed - Submitted&apos; */
    ),
    ISCHANGED(CMPL123CME__CMPL123_WF_Status__c),
    OR(
        CMPL123CME__CMPL123_WF_Status__c = &apos;Review In Progress&apos;,
        CMPL123CME__CMPL123_WF_Status__c = &apos;Submission In Progress&apos;
    )
)</errorConditionFormula>
    <errorMessage>The workflow status of the Initial EMDR must be &apos;Closed - Submitted&apos; before this Supplemental EMDR can be progressed to the next state.</errorMessage>
</ValidationRule>