force-app/main/default/objects/CMPL123CME__EMDR__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
    <fullName>CMPL123CME__All</fullName>
    <columns>OLY_Assessment__c</columns>
    <columns>NAME</columns>
    <columns>CMPL123CME__CMPL123_WF_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OLY_Aging__c</columns>
    <columns>CMPL123CME__MDR_Due_Date__c</columns>
    <columns>CMPL123CME__Become_Aware_Date__c</columns>
    <columns>OLY_Days_Until_Due__c</columns>
    <columns>OLY_Assigned_To_Reviewer__c</columns>
    <columns>CMPL123CME__G3_Date_received_by_Mfg__c</columns>
    <columns>CMPL123CME__F6_Date_facility_dist_was_aware__c</columns>
    <columns>CMPL123CME__G6_Type_of_Report__c</columns>
    <columns>CMPL123CME__H1_Type_of_Reportable_Event_2021__c</columns>
    <columns>OLY_Type_of_Reporter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>